--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ environment.ts
 environment.prod.ts
 src/environments/environment.ts
 src/environments/environment.prod.ts
+
+# Test files with API keys (SECURITY)
+firebase-test.html
+*-test.html
